--- a/package.json
+++ b/package.json
@@ -29,16 +29,25 @@
   "homepage": "https://github.com/borntorun/angular-remote-typeaheadjs",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.1",
-    "grunt-contrib-uglify": "^0.8.1",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-exec": "^0.4.6",
     "grunt-karma": "^0.10.1",
     "grunt-ng-annotate": "^0.10.0",
+    "grunt-sed": "^0.1.1",
+    "grunt-shell": "^1.1.2",
+    "grunt-step": "^0.2.0",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "load-grunt-tasks": "^3.1.0",
+    "readline-sync": "^0.8.0",
+    "semver": "^4.3.3"
   }
 }
