--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ env:
   - TEST_SUITE=unit
 node_js:
 - 0.12
-script: tests/runci
+script: tests/run-ci
 before_script:
 - npm install -g grunt-cli@0.1.13
 - npm install -g node-static@0.7.6
 - npm install -g bower@1.3.12
 - bower install
-- grunt build
+- grunt
