--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 env:
   matrix:
   - TEST_SUITE=unit
+  - TEST_SUITE=integration BROWSER='chrome'
 node_js:
 - 0.12
 script: tests/run-ci
@@ -11,3 +12,5 @@ before_script:
 - npm install -g bower@1.3.12
 - bower install
 - grunt build
+addons:
+  sauce_connect: true
