--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ env:
   matrix:
   - TEST_SUITE=unit
   - TEST_SUITE=integration BROWSER='chrome'
+  global:
+    - secure: cUI29F9xzu0VSJ6lxy+koBVjLDf4aVuvc75GWikZw3gNVJKNEgorxTIdS7u2y0UWKfLYI0++uqaUecbJS2NAQ+TGP97UwsCfrB24XV7u9a9mWhnYqTqnkQXECnGUoQRHPcNQ0K81CZhjP5VlqL1+pVJG8t8/gveCc5o1EZm8jnE=
+    - secure: YRtGf9M4KRN8Xr1ScBzQK/yfeMH76mofr9bhMDaro/rVabH/IER8eVSlTIB2JA5xZy1EWCz05wyeHnXMO3Ei1QXkcFaexs4Z5Va+GEMTfhQhwDlCUy5irA/4K1SB5vGKUih9pWazV4Hd/4Eo56WdrwJnXZvWftArKxN35HLYD1g=
 node_js:
 - 0.12
 script: tests/run-ci
