--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
 - npm install -g grunt-cli@0.1.13
 - npm install -g node-static@0.7.6
 - npm install -g bower@1.3.12
+- npm install colors
 - bower install
 - grunt build
 addons:
