--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/borntorun/angular-remote-typeaheadjs",
   "devDependencies": {
     "chai": "^2.2.0",
+    "chai-as-promised": "^4.3.0",
     "grunt": "^0.4.5",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -48,6 +49,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^3.1.0",
+    "lodash": "^3.6.0",
     "mocha": "^2.2.4",
     "readline-sync": "^0.8.0",
     "semver": "^4.3.3",
