--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 env:
   matrix:
-  #- TEST_SUITE=unit
+  - TEST_SUITE=unit
+  - TEST_SUITE=integration BROWSER='internet explorer:11'
   - TEST_SUITE=integration BROWSER='chrome'
   global:
     - secure: cUI29F9xzu0VSJ6lxy+koBVjLDf4aVuvc75GWikZw3gNVJKNEgorxTIdS7u2y0UWKfLYI0++uqaUecbJS2NAQ+TGP97UwsCfrB24XV7u9a9mWhnYqTqnkQXECnGUoQRHPcNQ0K81CZhjP5VlqL1+pVJG8t8/gveCc5o1EZm8jnE=
