--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,19 @@ language: node_js
 env:
   matrix:
   - TEST_SUITE=unit
+  - TEST_SUITE=integration BROWSER='firefox'
+  - TEST_SUITE=integration BROWSER='firefox:3.5'
+  - TEST_SUITE=integration BROWSER='firefox:3.6'
+  - TEST_SUITE=integration BROWSER='safari:5'
+  - TEST_SUITE=integration BROWSER='safari:6'
+  - TEST_SUITE=integration BROWSER='safari:7'
+  - TEST_SUITE=integration BROWSER='internet explorer:7'
+  - TEST_SUITE=integration BROWSER='internet explorer:8'
+  - TEST_SUITE=integration BROWSER='internet explorer:9'
+  - TEST_SUITE=integration BROWSER='internet explorer:10'
   - TEST_SUITE=integration BROWSER='internet explorer:11'
+  - TEST_SUITE=integration BROWSER='opera:11'
+  - TEST_SUITE=integration BROWSER='opera:12'
   - TEST_SUITE=integration BROWSER='chrome'
   global:
     - secure: cUI29F9xzu0VSJ6lxy+koBVjLDf4aVuvc75GWikZw3gNVJKNEgorxTIdS7u2y0UWKfLYI0++uqaUecbJS2NAQ+TGP97UwsCfrB24XV7u9a9mWhnYqTqnkQXECnGUoQRHPcNQ0K81CZhjP5VlqL1+pVJG8t8/gveCc5o1EZm8jnE=
