--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ temp
 !/bower_components/jquery/dist
 /bower_components/jquery/dist/*
 !/bower_components/jquery/dist/jquery.min.js
+!/bower_components/jquery/dist/jquery.min.map
 
 #the same login as above
 !/bower_components/typeahead.js
