--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ branches:
   only:
     - master
     - /^integration-.*$/
+    - /^changes-to-.*$/
 before_script:
 - npm install -g grunt-cli@0.1.13
 - npm install -g node-static@0.7.6
