Refactor options and attributes Refactor specs tests (not yet finished)

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mocha": "^2.2.4",
     "readline-sync": "^0.8.0",
     "semver": "^4.3.3",
+    "sinon": "^1.14.1",
     "yiewd": "^0.6.0"
   }
 }
