--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -28,6 +28,7 @@
     "moment": true,
     "describe": true,
     "before": true,
+    "beforeAll": true,
     "beforeEach": true,
     "after": true,
     "afterEach": true,
@@ -39,6 +40,7 @@
     "browser": true,
     "element": true,
     "by": true,
-    "sinon": true
+    "sinon": true,
+    "jasmine": true
   }
 }
