Refactor specs tests Devel with Mocha framework (not yet finished)

--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -26,6 +26,7 @@
     "$": true,
     "_": true,
     "moment": true,
+    "async": true,
     "describe": true,
     "xdescribe": true,
     "before": true,
