--- a/package.json
+++ b/package.json
@@ -35,13 +35,17 @@
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-jshint": "^0.11.1",
     "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-exec": "^0.4.6",
     "grunt-karma": "^0.10.1",
     "grunt-ng-annotate": "^0.10.0",
+    "grunt-protractor-runner": "^2.0.0",
+    "grunt-protractor-webdriver": "^0.2.0",
     "grunt-sed": "^0.1.1",
-    "grunt-shell": "^1.1.2",
+    "grunt-shell-spawn": "^0.3.8",
     "grunt-step": "^0.2.0",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
@@ -49,12 +53,14 @@
     "karma-coverage": "^0.3.1",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
+    "karma-junit-reporter": "^0.2.2",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon-chai": "^0.3.0",
     "load-grunt-tasks": "^3.1.0",
     "lodash": "^3.6.0",
     "mocha": "^2.2.4",
+    "protractor": "^2.0.0",
     "readline-sync": "^0.8.0",
     "semver": "^4.3.3",
     "sinon": "^1.14.1",
