--- a/bower.json
+++ b/bower.json
@@ -38,8 +38,7 @@
     ".jshintrc"
   ],
   "dependencies": {
-    "angular": "~1.3.14",
-    "typeahead.js": "~0.10.5"
+    "angular": "~1.3.14"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.14",
