--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-exec": "^0.4.6",
     "grunt-karma": "^0.10.1",
     "grunt-ng-annotate": "^0.10.0",
+    "grunt-ngdocs": "^0.2.7",
     "grunt-protractor-runner": "^2.0.0",
     "grunt-protractor-webdriver": "^0.2.0",
     "grunt-sed": "^0.1.1",
