--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,18 @@ language: node_js
 env:
   matrix:
   - TEST_SUITE=unit
-  - TEST_SUITE=integration BROWSER='chrome'
-  - TEST_SUITE=integration BROWSER='chrome:40'
-  - TEST_SUITE=integration BROWSER='chrome:39'
-  - TEST_SUITE=integration BROWSER='firefox'
-  - TEST_SUITE=integration BROWSER='firefox:35'
-  - TEST_SUITE=integration BROWSER='firefox:36'
-  - TEST_SUITE=integration BROWSER='safari:7'
-  - TEST_SUITE=integration BROWSER='safari:8'
-  - TEST_SUITE=integration BROWSER='internet explorer:9'
-  - TEST_SUITE=integration BROWSER='internet explorer:10'
-  - TEST_SUITE=integration BROWSER='internet explorer:11'
+  - TEST_SUITE=e2e
+  #- TEST_SUITE=integration BROWSER='chrome'
+  #- TEST_SUITE=integration BROWSER='chrome:40'
+  #- TEST_SUITE=integration BROWSER='chrome:39'
+  #- TEST_SUITE=integration BROWSER='firefox'
+  #- TEST_SUITE=integration BROWSER='firefox:35'
+  #- TEST_SUITE=integration BROWSER='firefox:36'
+  #- TEST_SUITE=integration BROWSER='safari:7'
+  #- TEST_SUITE=integration BROWSER='safari:8'
+  #- TEST_SUITE=integration BROWSER='internet explorer:9'
+  #- TEST_SUITE=integration BROWSER='internet explorer:10'
+  #- TEST_SUITE=integration BROWSER='internet explorer:11'
   #- TEST_SUITE=integration BROWSER='opera:28'
   global:
     - secure: cUI29F9xzu0VSJ6lxy+koBVjLDf4aVuvc75GWikZw3gNVJKNEgorxTIdS7u2y0UWKfLYI0++uqaUecbJS2NAQ+TGP97UwsCfrB24XV7u9a9mWhnYqTqnkQXECnGUoQRHPcNQ0K81CZhjP5VlqL1+pVJG8t8/gveCc5o1EZm8jnE=
@@ -29,6 +30,7 @@ before_script:
 - npm install -g grunt-cli@0.1.13
 - npm install -g node-static@0.7.6
 - npm install -g bower@1.3.12
+- npm install -g protractor
 - npm install colors
 - bower install
 - grunt build
