--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Joao Carvalho <jmmtcarvalho@gmail.com>"
   ],
-  "description": "Angularjs directive to facilitate the use of the typeahead.js library.",
+  "description": "An AngularJS directive to serve as a wrapper to the typeahead.js library.",
   "main": "dist/angular-typeaheadjs.js",
   "keywords": [
     "angularjs",
@@ -38,7 +38,8 @@
     ".jshintrc"
   ],
   "dependencies": {
-    "angular": "~1.3.14"
+    "angular": "~1.3.14",
+    "typeahead.js": "~0.11.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.14",
