--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 env:
   matrix:
-  - TEST_SUITE=unit
+  #- TEST_SUITE=unit
   - TEST_SUITE=e2e
   #- TEST_SUITE=integration BROWSER='chrome'
   #- TEST_SUITE=integration BROWSER='chrome:40'
