--- a/tests/e2e/.jshintrc
+++ b/tests/e2e/.jshintrc
@@ -37,6 +37,7 @@
     "module": true,
     "inject": true,
     "it": true,
+    "xit": true,
     "spyOn": true,
     "expect": true,
     "browser": true,
