Correct e2e tests - experiment browser ie10

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: node_js
 env:
   matrix:
   #- TEST_SUITE=unit
-  - TEST_SUITE=e2e BROWSER='chrome'
+  #- TEST_SUITE=e2e BROWSER='chrome'
   - TEST_SUITE=e2e BROWSER='ie'
+  #- TEST_SUITE=e2e BROWSER='firefox'
+  #- TEST_SUITE=e2e BROWSER='safari'
   #- TEST_SUITE=integration BROWSER='chrome'
   #- TEST_SUITE=integration BROWSER='chrome:40'
   #- TEST_SUITE=integration BROWSER='chrome:39'
