--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: node_js
 env:
   matrix:
   #- TEST_SUITE=unit
-  - TEST_SUITE=e2e BROWSER='chrome'
-  - TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='10'
-  - TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='11'
-  #- TEST_SUITE=e2e BROWSER='firefox'
+  #- TEST_SUITE=e2e BROWSER='chrome'
+  #- TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='10'
+  #- TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='11'
+  - TEST_SUITE=e2e BROWSER='firefox'
   #- TEST_SUITE=e2e BROWSER='safari'
   #- TEST_SUITE=integration BROWSER='chrome'
   #- TEST_SUITE=integration BROWSER='chrome:40'
