Correct e2e tests - experiment browser safari

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   #- TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='11'
   #- TEST_SUITE=e2e BROWSER='firefox'
   - TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='7'
-  - TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='8'
+  #- TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='8'
   #- TEST_SUITE=integration BROWSER='chrome'
   #- TEST_SUITE=integration BROWSER='chrome:40'
   #- TEST_SUITE=integration BROWSER='chrome:39'
