--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: node_js
 env:
   matrix:
-  #- TEST_SUITE=unit
+  - TEST_SUITE=unit
   - TEST_SUITE=e2e BROWSER='chrome'
   - TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='10'
   - TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='11'
   - TEST_SUITE=e2e BROWSER='firefox'
   - TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='7'
   - TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='8'
+  #This ones were for use with mocha
   #- TEST_SUITE=integration BROWSER='chrome'
   #- TEST_SUITE=integration BROWSER='chrome:40'
   #- TEST_SUITE=integration BROWSER='chrome:39'
@@ -25,7 +26,7 @@ env:
     - secure: YRtGf9M4KRN8Xr1ScBzQK/yfeMH76mofr9bhMDaro/rVabH/IER8eVSlTIB2JA5xZy1EWCz05wyeHnXMO3Ei1QXkcFaexs4Z5Va+GEMTfhQhwDlCUy5irA/4K1SB5vGKUih9pWazV4Hd/4Eo56WdrwJnXZvWftArKxN35HLYD1g=
 node_js:
 - 0.12
-script: tests/run-ci
+script: tests/e2e/integration/run-ci
 branches:
   only:
     - master
