Add Q module dependency Change code to use Q instead of angular $q Update README.md

--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -24,6 +24,7 @@
     "angular": true,
     "console": true,
     "Bloodhound": true,
+    "Q": true,
     "$": true,
     "_": true,
     "moment": true,
