--- a/bower.json
+++ b/bower.json
@@ -29,17 +29,20 @@
     "bower_components",
     "tests",
     "src",
+    "docs",
     ".gitignore",
     ".gitattributes",
     "Gruntfile.js",
-    "karma.conf.js",
+    "karma.**.js",
     "package.json",
     ".bowerrc",
-    ".jshintrc"
+    ".jshintrc",
+    ".travis.yml"
   ],
   "dependencies": {
     "angular": "~1.3.14",
-    "typeahead.js": "~0.11.1"
+    "typeahead.js": "~0.11.1",
+    "q": "1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.14",
