--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-ngdocs": "^0.2.7",
     "grunt-protractor-runner": "^2.0.0",
     "grunt-protractor-webdriver": "^0.2.0",
+    "grunt-release-build": "^0.1.2",
     "grunt-sed": "^0.1.1",
     "grunt-shell-spawn": "^0.3.8",
     "grunt-step": "^0.2.0",
