--- a/package.json
+++ b/package.json
@@ -24,44 +24,50 @@
     "url": "https://github.com/borntorun/angular-typeaheadjs/issues"
   },
   "homepage": "https://github.com/borntorun/angular-typeaheadjs",
+  "scripts": {
+    "test": "grunt test:single",
+    "test:e2e": "grunt test:e2e:single",
+    "postinstall": "webdriver-manager update --standalone"
+  },
   "devDependencies": {
-    "chai": "^2.2.0",
-    "chai-as-promised": "^4.3.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "colors": "^1.0.3",
-    "grunt": "^0.4.5",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.10.1",
-    "grunt-contrib-jshint": "^0.11.1",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-exec": "^0.4.6",
-    "grunt-karma": "^0.10.1",
-    "grunt-ng-annotate": "^0.10.0",
+    "grunt": "^1.0.1",
+    "grunt-concurrent": "^2.3.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-exec": "^1.0.0",
+    "grunt-karma": "^2.0.0",
+    "grunt-ng-annotate": "^2.0.2",
     "grunt-ngdocs": "^0.2.7",
-    "grunt-protractor-runner": "^2.0.0",
+    "grunt-protractor-runner": "^3.2.0",
     "grunt-protractor-webdriver": "^0.2.0",
     "grunt-release-build": "^0.1.2",
     "grunt-sed": "^0.1.1",
     "grunt-shell-spawn": "^0.3.8",
-    "grunt-step": "^0.2.0",
+    "grunt-step": "^1.0.0",
     "jasmine-core": "^2.2.0",
-    "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.3.1",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-jasmine": "^0.3.5",
-    "karma-junit-reporter": "^0.2.2",
-    "karma-mocha": "^0.1.10",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-sinon-chai": "^0.3.0",
+    "jasmine-spec-reporter": "^2.5.0",
+    "karma": "^1.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-junit-reporter": "^1.1.0",
+    "karma-mocha": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-sinon-chai": "^1.2.2",
     "load-grunt-tasks": "^3.1.0",
-    "lodash": "^3.6.0",
+    "lodash": "^4.13.1",
     "mocha": "^2.2.4",
-    "protractor": "^2.0.0",
-    "readline-sync": "^0.8.0",
-    "semver": "^4.3.3",
+    "protractor": "^3.3.0",
+    "readline-sync": "^1.4.4",
+    "semver": "^5.2.0",
     "sinon": "^1.14.1",
     "yiewd": "^0.6.0"
   }
