--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "grunt-protractor-runner": "^3.2.0",
     "grunt-protractor-webdriver": "^0.2.0",
     "grunt-release-build": "^0.2.0",
-    "grunt-sed": "^0.1.1",
+    "grunt-sed": "git://github.com/borntorun/grunt-sed.git#update-dependencies",
     "grunt-shell-spawn": "^0.3.8",
     "grunt-step": "^1.0.0",
     "jasmine-core": "^2.2.0",
@@ -69,6 +69,7 @@
     "readline-sync": "^1.4.4",
     "semver": "^5.2.0",
     "sinon": "^1.14.1",
+    "sinon-chai": "^2.8.0",
     "yiewd": "^0.6.0"
   }
 }
