Change .travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ env:
   matrix:
   - TEST_SUITE=unit
   - TEST_SUITE=e2e BROWSER='chrome'
-  - TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='10'
-  - TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='11'
+  - TEST_SUITE=e2e BROWSER='ie'
+  #- TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='10'
+  #- TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='11'
   - TEST_SUITE=e2e BROWSER='firefox'
-  - TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='7'
-  - TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='8'
+  - TEST_SUITE=e2e BROWSER='safari'
+  #- TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='7'
+  #- TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='8'
 
   global:
     - secure: cUI29F9xzu0VSJ6lxy+koBVjLDf4aVuvc75GWikZw3gNVJKNEgorxTIdS7u2y0UWKfLYI0++uqaUecbJS2NAQ+TGP97UwsCfrB24XV7u9a9mWhnYqTqnkQXECnGUoQRHPcNQ0K81CZhjP5VlqL1+pVJG8t8/gveCc5o1EZm8jnE=
