--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,14 @@ env:
   - TEST_SUITE=unit
   - TEST_SUITE=e2e BROWSER='chrome'
   - TEST_SUITE=e2e BROWSER='ie'
-  #- TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='10'
-  #- TEST_SUITE=e2e BROWSER='ie' BROWSERVERSION='11'
   - TEST_SUITE=e2e BROWSER='firefox'
   - TEST_SUITE=e2e BROWSER='safari'
-  #- TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='7'
-  #- TEST_SUITE=e2e BROWSER='safari' BROWSERVERSION='8'
 
   global:
     - secure: cUI29F9xzu0VSJ6lxy+koBVjLDf4aVuvc75GWikZw3gNVJKNEgorxTIdS7u2y0UWKfLYI0++uqaUecbJS2NAQ+TGP97UwsCfrB24XV7u9a9mWhnYqTqnkQXECnGUoQRHPcNQ0K81CZhjP5VlqL1+pVJG8t8/gveCc5o1EZm8jnE=
     - secure: YRtGf9M4KRN8Xr1ScBzQK/yfeMH76mofr9bhMDaro/rVabH/IER8eVSlTIB2JA5xZy1EWCz05wyeHnXMO3Ei1QXkcFaexs4Z5Va+GEMTfhQhwDlCUy5irA/4K1SB5vGKUih9pWazV4Hd/4Eo56WdrwJnXZvWftArKxN35HLYD1g=
 node_js:
-- 4.4.5
+- 4
 script: tests/e2e/integration/run-ci
 branches:
   only:
@@ -23,9 +19,9 @@ branches:
     - /^integration-.*$/
     - /^changes-to-.*$/
 before_script:
-- npm install -g grunt-cli@1.2.0
-- npm install -g node-static@0.7.7
-- npm install -g bower@1.7.9
+- npm install -g grunt-cli
+- npm install -g node-static
+- npm install -g bower
 - npm install -g protractor
 - npm install colors
 - bower install
